php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #64106 Segfault on SplFixedArray[][x] = y when extended
Submitted: 2013-01-30 19:02 UTC Modified: 2013-01-30 19:21 UTC
From: nikic@php.net Assigned: nikic (profile)
Status: Closed Package: SPL related
PHP Version: Irrelevant OS:
Private report: No CVE-ID: None
 [2013-01-30 19:02 UTC] nikic@php.net
Description:
------------
Segfault on this script:

<?php

class MyFixedArray extends SplFixedArray {
    public function offsetGet($offset) {}
}

$array = new MyFixedArray(10);
$array[][1] = 10;

Same applies to ArrayObject.



Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2013-01-30 19:21 UTC] nikic@php.net
-Assigned To: +Assigned To: nikic
 [2013-01-30 19:38 UTC] nikic@php.net
Automatic comment on behalf of nikic
Revision: http://git.php.net/?p=php-src.git;a=commit;h=321f4f18e52bfabe19fb9217dff0bf661d48e5d3
Log: Fixed bug #64106: Segfault on SplFixedArray[][x] = y when extended
 [2013-01-30 19:38 UTC] nikic@php.net
-Status: Assigned +Status: Closed
 [2013-01-30 19:45 UTC] nikic@php.net
Automatic comment on behalf of nikic
Revision: http://git.php.net/?p=php-src.git;a=commit;h=f540e086e26280036f868c8bb5df458364f71f02
Log: Fixed bug #64106: Segfault on SplFixedArray[][x] = y when extended
 [2013-01-30 19:45 UTC] nikic@php.net
Automatic comment on behalf of nikic
Revision: http://git.php.net/?p=php-src.git;a=commit;h=f540e086e26280036f868c8bb5df458364f71f02
Log: Fixed bug #64106: Segfault on SplFixedArray[][x] = y when extended
 [2013-01-30 23:36 UTC] lstrojny@php.net
Automatic comment on behalf of nikic
Revision: http://git.php.net/?p=php-src.git;a=commit;h=321f4f18e52bfabe19fb9217dff0bf661d48e5d3
Log: Fixed bug #64106: Segfault on SplFixedArray[][x] = y when extended
 [2013-03-01 18:32 UTC] stas@php.net
Automatic comment on behalf of nikic
Revision: http://git.php.net/?p=php-src.git;a=commit;h=321f4f18e52bfabe19fb9217dff0bf661d48e5d3
Log: Fixed bug #64106: Segfault on SplFixedArray[][x] = y when extended
 [2013-11-17 09:31 UTC] laruence@php.net
Automatic comment on behalf of nikic
Revision: http://git.php.net/?p=php-src.git;a=commit;h=f540e086e26280036f868c8bb5df458364f71f02
Log: Fixed bug #64106: Segfault on SplFixedArray[][x] = y when extended
 [2014-10-07 23:20 UTC] stas@php.net
Automatic comment on behalf of nikic
Revision: http://git.php.net/?p=php-src-security.git;a=commit;h=321f4f18e52bfabe19fb9217dff0bf661d48e5d3
Log: Fixed bug #64106: Segfault on SplFixedArray[][x] = y when extended
 [2014-10-07 23:31 UTC] stas@php.net
Automatic comment on behalf of nikic
Revision: http://git.php.net/?p=php-src-security.git;a=commit;h=321f4f18e52bfabe19fb9217dff0bf661d48e5d3
Log: Fixed bug #64106: Segfault on SplFixedArray[][x] = y when extended
 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Tue Sep 15 10:00:02 2026 UTC