Fixed bug #64106: Segfault on SplFixedArray[][x] = y when extended